--- a/styles/projects_styles.css
+++ b/styles/projects_styles.css
@@ -45,6 +45,13 @@ main {
 	padding: 2%;
 }
 
+.img4 {
+	display: block;
+	align-items: center;
+	margin: 0;
+	padding: 2%;
+}
+
 
 /* ==================================
 	Mobile Styles: 0px to 480px
@@ -98,6 +105,12 @@ main {
 		margin-left: 12%;
 	}
 	.img3 {
+		display: flex;
+		padding: 2%;
+		align-items: center;
+		margin-left: 12%;
+	}
+	.img4 {
 		display: flex;
 		padding: 2%;
 		align-items: center;
