--- a/styles/projects_styles.css
+++ b/styles/projects_styles.css
@@ -1,6 +1,6 @@
 img {
-	width: 40% !important;
-	height: 35% !important;
+	width: 40% ;
+	height: 35% ;
 	box-shadow: 10px 10px 15px #011627;
 	padding: 10px;
 	background-color: #4CA0EB;
