--- a/styles/projects_styles.css
+++ b/styles/projects_styles.css
@@ -1,6 +1,10 @@
 img {
-	width: 40% ;
-	height: 35% ;
+	width: 40%;
+	max-width: 350px;
+	min-width: 300px;
+	height: 35%;
+	max-height: 300px;
+	min-height: 260px;
 	box-shadow: 10px 10px 15px #011627;
 	padding: 10px;
 	background-color: #4CA0EB;
